--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,3 +1,5 @@
 p {
-    background-color: 100, 0, 0;
+    background-color: rgb(231, 141, 127);
+    font-family: "Verdana", "DejaVu Sans", sans-serif;
+    
 }
