Add third element css

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,8 +1,11 @@
-p {
+.pink-bckgrnd {
     background-color: rgb(231, 141, 127);
     font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
 #id {
     color: blue;
     font-size: 36px;
+}
+.pink-bckgrnd.cooler {
+    font-size: 24px;
 }
