Add fourth element css

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -9,3 +9,8 @@
 .pink-bckgrnd.cooler {
     font-size: 24px;
 }
+.another {
+    background-color: rgb(129, 223, 129);
+    font-size: 24px;
+    font-weight: bold;
+}
