--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -5,3 +5,7 @@
 .yellow {
     background-color: yellow;
 }
+.border {
+    font-size: 28px;
+    font-family: "Helvetica", "Times New Roman", sans-serif;
+}
