--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -5,7 +5,8 @@
 .yellow {
     background-color: yellow;
 }
-.border {
+.black,
+.yellow {
     font-size: 28px;
     font-family: "Helvetica", "Times New Roman", sans-serif;
 }
